--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@paper-design/shaders": "^0.0.68",
     "@supabase/supabase-js": "^2.78.0",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
