--- a/package.json
+++ b/package.json
@@ -13,20 +13,18 @@
     "@supabase/supabase-js": "^2.78.0",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
-    "leaflet": "^1.9.4",
-    "leaflet-defaulticon-compatibility": "^0.1.2",
     "lucide-react": "^0.562.0",
+    "maplibre-gl": "^5.15.0",
     "next": "^14.2.35",
+    "next-themes": "^0.3.0",
     "openai": "^6.15.0",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
