--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
